--- a/react-project/react-app/src/Components/TvShowDetails/TvShowDetails.css
+++ b/react-project/react-app/src/Components/TvShowDetails/TvShowDetails.css
@@ -241,3 +241,7 @@ body {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+span {
+    color: white !important;
+  }
+  
