--- a/react-project/react-app/src/Components/MovieDetails/MovieDetails.css
+++ b/react-project/react-app/src/Components/MovieDetails/MovieDetails.css
@@ -257,3 +257,39 @@ body {
     height: 50vh;  /* Adjust the height for smaller screens */
   }
 }
+.play-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.play-popup-content {
+  position: relative;
+  width: 80%;
+  max-width: 900px;
+  height: 80%;
+  background: #fff;
+}
+
+.play-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.play-popup-iframe {
+  width: 100%;
+  height: 100%;
+}
